--- a/.github/workflows/dev-flow.yml
+++ b/.github/workflows/dev-flow.yml
@@ -18,7 +18,7 @@ jobs:
         uses: actions/setup-node@v4
 
       - name: Install all dependencies
-        run: npm Install
+        run: npm install
 
       - name: Build project
         run: npm run build
